fix column_visibility

--- a/assets/css/common.css
+++ b/assets/css/common.css
@@ -34,7 +34,7 @@ Annual Table Column Selector Popup
     display: none;
     z-index: 9;
     /*width: 700px;*/
-    margin-left: 138px;
+    margin-left: 134px;
     margin-top: 8px;
 }
 
